// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LineDetail matches snapshot for CTA line 1`] = `
<div>
  <div>
    <div
      class="mb-6 grid grid-cols-2 gap-3 sm:grid-cols-4"
    >
      <div
        class="rounded-xl border border-gray-100 bg-white p-4 text-center shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <p
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          33
        </p>
        <p
          class="mt-0.5 text-xs font-medium tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          Stations
        </p>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white p-4 text-center shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <p
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          23 mi
        </p>
        <p
          class="mt-0.5 text-xs font-medium tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          Route Miles
        </p>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white p-4 text-center shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <p
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          Howard
        </p>
        <p
          class="mt-0.5 text-xs font-medium tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          From
        </p>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white p-4 text-center shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <p
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          95th/Dan Ryan
        </p>
        <p
          class="mt-0.5 text-xs font-medium tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          To
        </p>
      </div>
    </div>
    <div
      class="mb-10 grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3"
    >
      <div
        class="rounded-xl border border-gray-100 bg-white p-5 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <h2
          class="mb-4 text-xs font-semibold tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          Schedule
        </h2>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            24-Hour Service
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-green-600"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-green-500"
              />
               Yes
            </span>
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            Peak Frequency
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            Every 3 min
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            Off-Peak Frequency
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            Every 8 min
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            First Train
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            4:00 AM
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            Last Train
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            1:00 AM
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white p-5 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <h2
          class="mb-4 text-xs font-semibold tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          System IDs
        </h2>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            CTA Route ID
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            Red
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LineDetail matches snapshot for Metra line 1`] = `
<div>
  <div>
    <div
      class="mb-6 grid grid-cols-2 gap-3 sm:grid-cols-4"
    >
      <div
        class="rounded-xl border border-gray-100 bg-white p-4 text-center shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <p
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          24
        </p>
        <p
          class="mt-0.5 text-xs font-medium tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          Stations
        </p>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white p-4 text-center shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <p
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          37 mi
        </p>
        <p
          class="mt-0.5 text-xs font-medium tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          Route Miles
        </p>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white p-4 text-center shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <p
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          Union Station
        </p>
        <p
          class="mt-0.5 text-xs font-medium tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          From
        </p>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white p-4 text-center shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <p
          class="text-2xl font-bold text-gray-900 dark:text-white"
        >
          Aurora
        </p>
        <p
          class="mt-0.5 text-xs font-medium tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          To
        </p>
      </div>
    </div>
    <div
      class="mb-10 grid grid-cols-1 gap-4 sm:grid-cols-2 lg:grid-cols-3"
    >
      <div
        class="rounded-xl border border-gray-100 bg-white p-5 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <h2
          class="mb-4 text-xs font-semibold tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          Schedule
        </h2>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            24-Hour Service
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            <span
              class="inline-flex items-center gap-1 text-sm font-medium text-gray-400"
            >
              <span
                class="h-1.5 w-1.5 rounded-full bg-gray-300"
              />
               No
            </span>
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            First Train
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            5:00 AM
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            Last Train
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            11:30 PM
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white p-5 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <h2
          class="mb-4 text-xs font-semibold tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          Operations
        </h2>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            Downtown Terminal
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            Union Station
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            Operator
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            BNSF Railway
          </span>
        </div>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            Counties Served
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            Cook, DuPage
          </span>
        </div>
      </div>
      <div
        class="rounded-xl border border-gray-100 bg-white p-5 shadow-sm dark:border-gray-700 dark:bg-gray-900"
      >
        <h2
          class="mb-4 text-xs font-semibold tracking-widest text-gray-400 uppercase dark:text-gray-500"
        >
          System IDs
        </h2>
        <div
          class="flex items-start justify-between gap-4 border-b border-gray-50 py-2 last:border-0 dark:border-gray-800"
        >
          <span
            class="shrink-0 text-sm text-gray-500 dark:text-gray-400"
          >
            Metra Line Code
          </span>
          <span
            class="text-right text-sm font-medium text-gray-900 dark:text-white"
          >
            BNSF
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
